# neusis

./: .gitignore  .gitmodules  .markdownlint.yaml  404.html  CLAUDE.md  README.md  flake.nix  index.html  mkdocs.yml  shell.nix
.claude/: settings.local.json
architecture/architecture/: index.html
development/environment_setup/: index.html
docs/: 02_getting_started.md  03_architecture.md  03_environment_setup.md  04_user_management.md  CLAUDE.md  README.md  add_users.md  architecture.md  create_user.md  index.md  machines.md  modify_home.md  understanding_the_architecture.md
docs/development/: create-venv.md  create_env.md  environment_setup.md
docs/operations/: 01_deployment.md  02_secrets.md  03_monitoring.md  99_troubleshooting.md  README.md  deployment.md  hardware-reference.md  monitoring.md  secrets.md  troubleshooting.md
docs/resources/: ryan4yin-nixos-and-flakes-book-052acc2842df4c2f.txt
docs/user/: 01_getting_started.md  02_architecture.md  03_environment_setup.md  04_user_management.md  README.md
docs/user_setup/: add_users.md  create_keys.md  create_user.md  getting_started.md  user_management.md
fhsexp/: pyproject.toml
fhsexp/src/yourproject/: cli.py
flakeModules/: default.nix  lib.nix  nixosModules.nix  packages.nix
flakeModules/checks/: default.nix
flakeModules/checks/machines/: default.nix  oppy.nix  oppy_test.py
flakeModules/neusisOSConfigs/: anklab.nix  cslab.nix  default.nix
homes/akalinin/: home.nix  id_ed25519.pub
homes/amunoz/: home.nix  id_ed25519.pub
homes/ank/: home.nix  id2_ed25519.pub  id_ed25519.pub  id_rsa.pub  karkinos.nix  packages.nix
homes/arao/: id_ed25519.pub
homes/ashah/: home.nix  id_rsa.pub
homes/common/: darwin_dock.nix  gpu_tools.nix  home_manager.nix
homes/eweisbar/: home.nix  id_ed25519.pub
homes/jarevalo/: darwin001.nix  home.nix  id_ed25519.pub  karkinos.nix
homes/jewald/: home.nix  id_ed25519.pub
homes/jfredinh/: home.nix  id_ed25519.pub
homes/jrietdij/: home.nix  id_ed25519.pub
homes/kshimofu/: home.nix  id_ed25519.pub
homes/leliu/: home.nix  id_ed25519.pub
homes/limeliss/: id_ed25519.pub
homes/ngogober/: .p10k.zsh  home.nix  id_ed25519.pub  zsh.nix
homes/niv/: home.nix  id_ed25519.pub
homes/rshen/: home.nix  id_ed25519.pub
homes/shsingh/: home.nix  id_ed25519.pub
homes/skhosrav/: home.nix  id_ed25519.pub
homes/spathak/: home.nix  id_ed25519.pub
homes/suganya/: home.nix  id_ed25519.pub
homes/yektefai/: id_ed25519.pub
homes/zhaochuj/: id_ed25519.pub
lib/: default.nix  neusisOS.nix
machines/: input_device.nix  registry.nix  secrets.nix  tailscale.nix  virtualization.nix
machines/chiral/: default.nix  hardware-configuration.nix
machines/common/: bootloader.nix  bootloader_systemd.nix  casks.nix  comin.nix  darwin_home_manager.nix  grub_bootloader.nix  guacamole-user-mapping.xml  guacamole.nix  input_device.nix  networking.nix  nix-homebrew.nix  nix.nix  nosleep.nix  open-webui-container.nix  pipewire.nix  router.nix  security.nix  ssh.nix  substituters.nix  sudo.nix  system.nix  tailscale.nix  virtualization.nix  vncserver.nix  zfs.nix
machines/darwin001/: default.nix
machines/gpu/: nvidia.nix
machines/karkinos/: boot.nix  default.nix  disko.nix  filesystem.nix  hardware-configuration.nix  misc.nix  netowrk.nix  network.nix  nvidia.nix  old_disko.nix  pipewire.nix  substituters.nix  tailscale.nix  virtualization.nix  vm.nix
machines/oppy/: EXPERIMENTS_DISKO_MIGRATION.md  PROGRESS.md  README.md  boot.nix  broad_req_routes.txt  cslab-infrastructure.nix  cslab-monitoring.nix  default.nix  disko.nix  disko_install_cmd.txt  filesystem.nix  hardware-configuration.nix  jupyterhub.nix  misc.nix  network.nix  network_config.txt  ollama.nix  packages.nix  services.nix  system.nix  users.nix  vm.nix
machines/rogue/: default.nix
machines/spirit/: boot.nix  default.nix  disko.nix  filesystem.nix  network.nix  ollama.nix  packages.nix  services.nix  system.nix
modules/home-manager/: default.nix
modules/nixos/: bonding.nix  cslab-infrastructure.nix  cslab-monitoring.nix  default.nix  ipmi_local.yml  monitoring.nix  netbird.nix  sunshine.nix  tailscale-disable-key-expiry.py  tailscale-disable-key-expiry.sh  tailscale-force-claim.py  tailscale-force-claim.sh  tailscale.nix  xilinx.nix  zfs.nix
overlays/: default.nix
pkgs/: default.nix  kexec_tailscale.nix
pkgs/avante-nvim/: default.nix
pkgs/claude-code/: default.nix  update.sh
pkgs/claude-code-router/: default.nix  package-lock.json  update.sh
pkgs/intel-fpgas/: README.md
pkgs/kalam/: default.nix
pkgs/kalampy/: default.nix
pkgs/kalamv2/: default.nix
pkgs/nvidia_vgpu/: default.nix
pkgs/specstory/: default.nix
pkgs/sst/: default.nix
pkgs/typedb/: bazelversion.patch  default.nix
pkgs/xilinx/: xrt.nix
scripts/: anywhere.py
search/: search_index.json
secrets/: oppy_ssh_host_ed25519_key.age  secrets.nix  tsauthkey.age
secrets/common/: ephemeral_tsauthkey.age  hashedInitialPassword.age  persistent_cslab_mesh.age  persistent_tsapiid.age  persistent_tsapikey.age  persistent_tsauthkey.age  tsclient.age  tssecret.age
secrets/oppy/: alloy_key.age  slack_webhook.age  tsauthkey.age
secrets/spirit/: tsauthkey.age
templates/: default.nix
templates/fhsflake/: flake.nix
templates/fhspythonml/: .gitignore  flake.nix  pyproject.toml  setup.py
templates/flake/: flake.nix
templates/python/: flake.nix
templates/python-nix/: flake.nix
templates/python-pixi/: demo.py  flake.nix  pyproject.toml
templates/python-pixi-multienv/: .gitignore  flake.nix  pyproject.toml
templates/python-pixi-multienv/src/pixi_multienv/: __init__.py
templates/python-uv/: demo.py  flake.nix  pyproject.toml
templates/pythonml/: flake.nix  pyproject.toml  settings.ini
templates/pythonml/nix/arion/: arion-compose.nix
templates/pythonml/src/thursday/: __init__.py
templates/pythonml/src/your_project/: __init__.py
templates/rust/: flake.nix
user_setup/getting_started/: index.html
user_setup/user_management/: index.html
users/: all.nix  ank.nix  cslab.nix  cslab_karkinos.nix  cslab_spirit.nix
(+217 files in other folders)
