[project]
name = "pixi-demo"
version = "0.1.0"
description = "2025 Best Practice: Pure Pixi for GPU/RAPIDS Python Development"
authors = [{name = "Shantanu Singh", email = "shsingh@broadinstitute.org"}]
requires-python = ">= 3.13"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# Pixi configuration - based on rapids_singlecell conda env
[tool.pixi.project]
channels = ["rapidsai", "nvidia", "conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
# Core RAPIDS environment (provides numpy, pandas, cupy, etc.)
rapids = "25.08.*"
python = "3.13.*"
cuda-version = "12.8.*"  # Match NixOS system CUDA
cudnn = "*"
cutensor = "*"
cusparselt = "*"

# Additional packages for demo (not in rapids)
typer = "*"
loguru = "*"
snakemake = "*"
duckdb = "<1.4.0"  # copairs needs older API
anndata = "*"

[tool.pixi.pypi-dependencies]
# PyPI-only packages
upsetplot = "*"
decoupler = "*"
omnipath = "*"
gdown = "*"
wget = "*"
rapids-singlecell = "*"

# Git sources (fully supported in 2025 pixi+uv)
copairs-runner = { git = "https://github.com/broadinstitute/monorepo.git", subdirectory = "libs/copairs_runner", rev = "copairs-runner" }

[tool.pixi.tasks]
